# bare-metal-manager-core

./: .dockerignore  Cargo.toml  secret_provider.rs
bluefield/: Makefile.toml
crates/api/: Cargo.toml
crates/api-db/src/: machine_topology.rs
crates/api-test-helper/src/: utils.rs
crates/api/files/: bf.cfg
crates/api/src/: api.rs  dpf.rs  ipmitool.rs  lib.rs  nvlink.rs  redfish.rs  run.rs  setup.rs
crates/dpf/: Cargo.toml  README.md
crates/dpf-beta/: Cargo.toml  Makefile.toml  README.md
crates/dpf-beta/src/: lib.rs  sdk.rs  types.rs
crates/dpf-beta/src/crds/: bfbs_generated.rs  dpfoperatorconfigs_generated.rs  dpuclusters_generated.rs  dpudeployments_generated.rs  dpudevices_generated.rs  dpudiscoveries_generated.rs  dpuflavors_generated.rs  dpunodemaintenances_generated.rs  dpunodes_generated.rs  dpus_generated.rs  dpuservicechains_generated.rs  dpuserviceconfigurations_generated.rs  dpuservicecredentialrequests_generated.rs  dpuserviceinterfaces_generated.rs  dpuserviceipams_generated.rs  dpuservicenads_generated.rs  dpuservices_generated.rs  dpuservicetemplates_generated.rs  dpusets_generated.rs  dpustoragepolicies_generated.rs  dpustoragevendors_generated.rs  dpuvirtualnetworks_generated.rs  dpuvolumeattachments_generated.rs  dpuvolumes_generated.rs  dpuvpcs_generated.rs  isolationclasses_generated.rs  mod.rs  servicechains_generated.rs  servicechainsets_generated.rs  serviceinterfaces_generated.rs  serviceinterfacesets_generated.rs
crates/dpf-beta/src/test/: maintenance_flow.rs  sdk_device_registration.rs  sdk_initialization.rs  sdk_maintenance_hold.rs  sdk_provisioning_flow.rs  sdk_reboot_annotation.rs
crates/dpf/design-docs/: 0101-DPF.md  DPF Carbide SDK - DPF background.md  SDD_ DPF Custom Resource SDK.md
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs  (+2 more)
pxe/: Makefile.toml
pxe/templates/: user-data
(+63 files in other folders)
